finish methylation slides

--- a/nanopolish/nanopolish.css
+++ b/nanopolish/nanopolish.css
@@ -115,3 +115,11 @@ and make the standard text family the same as the rest of the theme*/
     text-align: center;
     left: 25%;
 }
+
+/*styling the methylation haplotype image*/
+#meth_hap {
+    border: none;
+    -webkit-box-shadow: 6px 6px 25px 6px rgba(0,0,0,0.5);
+    -moz-box-shadow: 6px 6px 25px 6px rgba(0,0,0,0.5);
+    box-shadow: 6px 6px 25px 2px rgba(0,0,0,0.5);
+}
